--- a/app/views/kanbans/show.html.erb
+++ b/app/views/kanbans/show.html.erb
@@ -15,11 +15,19 @@
 <div id="color-help" style="display:none;">
   <%= content_tag(:h3, l(:kanban_text_color_help)) %>
   <ul>
+  <!--
     <li class="normal-color"><%= l(:kanban_text_normal_color) %></li>
     <li class="assigned-to-me-color"><%= l(:kanban_text_assigned_to_me_color) %></li>
     <li class="behind-schedule-color"><%= l(:kanban_text_behind_schedule_color) %></li>
     <li class="overdue-color"><%= l(:kanban_text_overdue_color) %></li>
     <li class="over-wip-color"><%= l(:kanban_text_over_wip_color) %></li>
+  -->
+    <li class="orphan-color"><%= l(:kanban_text_orphan_color) %></li>
+    <li class="hitch-color"><%= l(:kanban_text_hitch_color) %></li>
+    <li class="ancestor-color"><%= l(:kanban_text_ascendant_color) %></li>
+    <li class="descendant-color"><%= l(:kanban_text_descendant_color) %></li>
+    <li class="overdue-color"><%= l(:kanban_text_overdue_color) %></li>
+
   </ul>
 </div>
 
